deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getmando
  labels:
    app.kubernetes.io/name: getmando
    app.kubernetes.io/part-of: getmando
    app.kubernetes.io/component: dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: getmando
    app.kubernetes.io/component: dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
